--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "react-beautiful-dnd": "^13.1.1",
     "typescript": "^5"
   }
 }
